--- a/src/pug/pages/history-page-admin-fix.pug
+++ b/src/pug/pages/history-page-admin-fix.pug
@@ -21,85 +21,85 @@ block content
 					.search-wrapper
 						form(action="" method="method")
 							.form-item-slim
-								input.inp(type="text" name="inp_name")
+								input.inp(type="text" name="inp_name" placeholder="Поиск")
 								button.search-button(type="submit")
 					.history-list
 						//single
-						.history-item
-							.history-item__head
-								.history-item__info
+						.order-card
+							.order-card__head
+								.order-card__info
 									.fs-13.txt-muted 01.12.2025
-									.fs-16 #[span.txt-muted #] 123456789
+									.fs-16 #[span.txt-muted №] 123456789
 								.label.label-light В обработке
 							
-							.history-item__customer.fs-15
+							.order-card__customer.fs-15
 								.customer-name Александр Иванов
 								.customer-phone +7 (123) 123-45-67
 						
 						
 						//single
-						.history-item
-							.history-item__head
-								.history-item__info
+						.order-card
+							.order-card__head
+								.order-card__info
 									.fs-13.txt-muted 11.11.2025
-									.fs-16 #[span.txt-muted #] 987654321
+									.fs-16 #[span.txt-muted №] 987654321
 								.label.label-inter Выезд на объект
 							
-							.history-item__customer.fs-15
+							.order-card__customer.fs-15
 								.customer-name Валентина Петрищенкова
 								.customer-phone +7 (123) 123-45-67
 						//single
-						.history-item
-							.history-item__head
-								.history-item__info
+						.order-card
+							.order-card__head
+								.order-card__info
 									.fs-13.txt-muted 05.08.2025
-									.fs-16 #[span.txt-muted #] 456456
+									.fs-16 #[span.txt-muted №] 456456
 								.label.label-inter Согласование
 							
-							.history-item__customer.fs-15
+							.order-card__customer.fs-15
 								.customer-name Константин Константинович
 								.customer-phone +7 (123) 123-45-67
 						
 						//single
-						.history-item
-							.history-item__head
-								.history-item__info
+						.order-card
+							.order-card__head
+								.order-card__info
 									.fs-13.txt-muted 07.03.2025
-									.fs-16 #[span.txt-muted #] 7867567
+									.fs-16 #[span.txt-muted №] 7867567
 								.label.label-inter Формирование документов
 							
-							.history-item__customer.fs-15
+							.order-card__customer.fs-15
 								.customer-name Валерий Арамо
 								.customer-phone +7 (123) 123-45-67
 						
 						//single
-						.history-item
-							.history-item__head
-								.history-item__info
+						.order-card
+							.order-card__head
+								.order-card__info
 									.fs-13.txt-muted 07.03.2025
-									.fs-16 #[span.txt-muted #] 345345356
+									.fs-16 #[span.txt-muted №] 345345356
 								.label.label-inter Подача в&nbsp;Росреестр
-							.history-item__customer.fs-15
+							.order-card__customer.fs-15
 								.customer-name Татьяна Сидорова
 								.customer-phone +7 (123) 123-45-67
 						//single
-						.history-item
-							.history-item__head
-								.history-item__info
+						.order-card
+							.order-card__head
+								.order-card__info
 									.fs-13.txt-muted 01.03.2025
-									.fs-16 #[span.txt-muted #] 67854
+									.fs-16 #[span.txt-muted №] 67854
 								.label.label-done Закрытие
-							.history-item__customer.fs-15
+							.order-card__customer.fs-15
 								.customer-name Петр Васильев
 								.customer-phone +7 (123) 123-45-67
 						//single
-						.history-item
-							.history-item__head
-								.history-item__info
+						.order-card
+							.order-card__head
+								.order-card__info
 									.fs-13.txt-muted 01.03.2025
-									.fs-16 #[span.txt-muted #] 67854
+									.fs-16 #[span.txt-muted №] 67854
 								.label.label-failure Отказ
-							.history-item__customer.fs-15
+							.order-card__customer.fs-15
 								.customer-name Александр
 								.customer-phone +7 (123) 123-45-67
 			
