--- a/src/pug/pages/history-page.pug
+++ b/src/pug/pages/history-page.pug
@@ -17,57 +17,57 @@ block content
 			section.history-content
 				.container
 					.search-wrapper
-						form(action="" method="method" placeholder="Поиск")
+						form(action="" method="method")
 							.form-item-slim
-								input.inp(type="text" name="inp_name")
+								input.inp(type="text" name="inp_name" placeholder="Поиск")
 								button.search-button(type="submit")
 					.history-list
 						//single
-						.history-item
-							.history-item__head
-								.history-item__info
+						.order-card
+							.order-card__head
+								.order-card__info
 									.fs-13.txt-muted 01.12.2025
 									.fs-16 #[span.txt-muted #] 123456789
 								.label.label-light В обработке
 						//single
-						.history-item
-							.history-item__head
-								.history-item__info
+						.order-card
+							.order-card__head
+								.order-card__info
 									.fs-13.txt-muted 11.11.2025
 									.fs-16 #[span.txt-muted #] 987654321
 								.label.label-inter Выезд на объект
 						//single
-						.history-item
-							.history-item__head
-								.history-item__info
+						.order-card
+							.order-card__head
+								.order-card__info
 									.fs-13.txt-muted 05.08.2025
 									.fs-16 #[span.txt-muted #] 456456
 								.label.label-inter Согласование
 						//single
-						.history-item
-							.history-item__head
-								.history-item__info
+						.order-card
+							.order-card__head
+								.order-card__info
 									.fs-13.txt-muted 07.03.2025
 									.fs-16 #[span.txt-muted #] 7867567
 								.label.label-inter Формирование документов
 						//single
-						.history-item
-							.history-item__head
-								.history-item__info
+						.order-card
+							.order-card__head
+								.order-card__info
 									.fs-13.txt-muted 07.03.2025
 									.fs-16 #[span.txt-muted #] 345345356
 								.label.label-inter Подача в&nbsp;Росреестр
 						//single
-						.history-item
-							.history-item__head
-								.history-item__info
+						.order-card
+							.order-card__head
+								.order-card__info
 									.fs-13.txt-muted 01.03.2025
 									.fs-16 #[span.txt-muted #] 67854
 								.label.label-done Закрытие
 						//single
-						.history-item
-							.history-item__head
-								.history-item__info
+						.order-card
+							.order-card__head
+								.order-card__info
 									.fs-13.txt-muted 01.03.2025
 									.fs-16 #[span.txt-muted #] 67854
 								.label.label-failure Отказ
