--- a/src/pug/pages/order-page-customer.pug
+++ b/src/pug/pages/order-page-customer.pug
@@ -16,37 +16,37 @@ block content
 		
 		//MAIN
 		main.main-inner
-			section.bid.bid--admin
+			section.order
 				.container
-					.bid-header.border-bot
+					.order-header.border-bot
 						.fs-15.date-box 01.12.2025
-						.bid-state-block
-							.label.label-light В обработке 
-
-					.bid-content.gap-15.border-bot
+						.order-state-block
+							.label.label-light В обработке
+							
+					.order-content.gap-15.border-bot
 						h2.h2 Услуги
-						.bid-content-list.gap-15
+						.order-content-list.gap-15
 							//SERV ITEM
-							.bid-item
-								.bid-item-title.h-16 «Технический паспорт (для ресурсоснабжающих организаций)
+							.order-item
+								.order-item-title.h-16 «Технический паспорт (для ресурсоснабжающих организаций)
 								
-								.bid-item-additional
+								.order-item-additional
 									.muted-15 Дополнительные услуги
-									ul.bid-additional-list
+									ul.order-additional-list
 										li.fs-15 Регистрация прав собственности и сделок в&nbsp;Росреестре
 										li.fs-15 Проведение геодезических и&nbsp;топографических съемок
 							//SERV ITEM
-							.bid-item
-								.bid-item-title.h-16 Межевой план
+							.order-item
+								.order-item-title.h-16 Межевой план
 								
-								.bid-item-additional
+								.order-item-additional
 									.muted-15 Дополнительные услуги
-									ul.bid-additional-list.fs-15
+									ul.order-additional-list.fs-15
 										li Подготовка документов для регистрации прав собственности
 			
 							//SERV ITEM
-							.bid-item
-								.bid-item-title.h-16 Консультация по документам
+							.order-item
+								.order-item-title.h-16 Консультация по документам
 			//CONTACTS
 			section.customer-contacts
 				.container.gap-15
@@ -73,7 +73,7 @@ block content
 							.contacts-item__txt
 								.fs-15.txt-muted Комментарий
 								.fs-16 Хотелось бы, чтобы заявка была выполнена в ближайшие 10 дней
-
+			//CHAT
 			section.messages
 				.container.gap-15
 					h2.h2 Обсуждение
