--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,7 +20,7 @@
 @use "sections/_single-service";
 @use "sections/_basket-page";
 @use "sections/_history";
-@use "sections/_bid-page";
+@use "sections/_order-page";
 
 @use "sections/_contacts-customer";
 @use "sections/_order-place";
