--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -14,8 +14,8 @@ block content
 			a(href="./basket-page.html") Корзина
 			a(href="./history-page.html") История обращений- Пользователь
 			a(href="./history-page-admin-fix.html") История обращений-Admin
-			a(href="./bid-page-customer.html") Заявка- Пользователь
-			a(href="./bid-page-admin.html") Заявка- Admin
+			a(href="./order-page-customer.html") Заявка- Пользователь
+			a(href="./order-page-admin.html") Заявка- Admin
 			a(href="./order-place.html") Оформление заказа
 			a(href="./404.html") 404
 
