--- a/src/scss/sections/_history.scss
+++ b/src/scss/sections/_history.scss
@@ -1,4 +1,4 @@
-.history-item{
+.order-card{
 	padding-block:15px;
 	border-bottom:1px solid #EBEDF5;
 	&__head{
@@ -10,7 +10,7 @@
 		&>*+*{margin-top: 6px;}
 	}
 	&__customer{
-		margin-top: 10px;
+		margin-top: 5px;
 		padding-left: 15px;
 		border-left: 1px solid var(--siniy);
 	}
