--- a/src/pug/pages/history-page.pug
+++ b/src/pug/pages/history-page.pug
@@ -27,49 +27,49 @@ block content
 							.order-card__head
 								.order-card__info
 									.fs-13.txt-muted 01.12.2025
-									.fs-16 #[span.txt-muted #] 123456789
+									.fs-16 #[span.txt-muted №] 123456789
 								.label.label-light В обработке
 						//single
 						.order-card
 							.order-card__head
 								.order-card__info
 									.fs-13.txt-muted 11.11.2025
-									.fs-16 #[span.txt-muted #] 987654321
+									.fs-16 #[span.txt-muted №] 987654321
 								.label.label-inter Выезд на объект
 						//single
 						.order-card
 							.order-card__head
 								.order-card__info
 									.fs-13.txt-muted 05.08.2025
-									.fs-16 #[span.txt-muted #] 456456
+									.fs-16 #[span.txt-muted №] 456456
 								.label.label-inter Согласование
 						//single
 						.order-card
 							.order-card__head
 								.order-card__info
 									.fs-13.txt-muted 07.03.2025
-									.fs-16 #[span.txt-muted #] 7867567
+									.fs-16 #[span.txt-muted №] 7867567
 								.label.label-inter Формирование документов
 						//single
 						.order-card
 							.order-card__head
 								.order-card__info
 									.fs-13.txt-muted 07.03.2025
-									.fs-16 #[span.txt-muted #] 345345356
+									.fs-16 #[span.txt-muted №] 345345356
 								.label.label-inter Подача в&nbsp;Росреестр
 						//single
 						.order-card
 							.order-card__head
 								.order-card__info
 									.fs-13.txt-muted 01.03.2025
-									.fs-16 #[span.txt-muted #] 67854
+									.fs-16 #[span.txt-muted №] 67854
 								.label.label-done Закрытие
 						//single
 						.order-card
 							.order-card__head
 								.order-card__info
 									.fs-13.txt-muted 01.03.2025
-									.fs-16 #[span.txt-muted #] 67854
+									.fs-16 #[span.txt-muted №] 67854
 								.label.label-failure Отказ
 
 		include ../sections/_footer-menu
