--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -4,7 +4,7 @@ block content
 	.start-page(style="background: white;")
 		h1 Кадастр Всем
 		.start-page__cards
-			a(href="./ui/colors.html") UI-KIT
+			a(href="#!") UI-KIT
 			a(href="./authorization.html") Авторизация-стартовая
 			a(href="./sms-code.html") Код смс
 			a(href="./authorization-finish.html") Завершить авторизацию
@@ -17,6 +17,7 @@ block content
 			a(href="./order-page-customer.html") Заявка- Пользователь
 			a(href="./order-page-admin.html") Заявка- Admin
 			a(href="./order-place.html") Оформление заказа
+			a(href="./order-success.html") Оформление заказа Успешно!
 			a(href="./404.html") 404
 
 			
