--- a/src/scss/sections/_history.scss
+++ b/src/scss/sections/_history.scss
@@ -3,11 +3,16 @@
 	border-bottom:1px solid #EBEDF5;
 	&__head{
 		display: flex;column-gap:15px;
+		align-items: center;
 	}
+	&__info .fs-16{white-space: nowrap;}
 	.fs-16{font-weight: 600;}
 	&__info{
 		flex:1;
-		&>*+*{margin-top: 6px;}
+		display: flex;
+		flex-direction: column;
+		row-gap:6px;
+		justify-content: center;
 	}
 	&__customer{
 		margin-top: 5px;
